--- a/src/fx/MesLivresAdmin.fxml
+++ b/src/fx/MesLivresAdmin.fxml
@@ -27,6 +27,11 @@
                               <Font name="Comic Sans MS Bold" size="27.0" />
                            </font>
                         </Label>
+                        <Label id="id" fx:id="username1" text="Id" textFill="ORANGE">
+                           <font>
+                              <Font name="Comic Sans MS Bold" size="27.0" />
+                           </font>
+                        </Label>
                      </children>
                   </VBox>
                   <VBox prefHeight="400.0" prefWidth="438.0" style="-fx-background-color: #ADD8E6;">
@@ -51,6 +56,7 @@
                                     <TableColumn fx:id="Auteur" prefWidth="66.0" text="Auteur" />
                                     <TableColumn fx:id="Prix" prefWidth="51.0" text="Prix" />
                                     <TableColumn fx:id="Pages" prefWidth="72.0" text="Pages" />
+                                    <TableColumn fx:id="Quantite" prefWidth="72.0" text="Quantite" />
                                 </columns>
                               </TableView>
                            </children>
@@ -64,7 +70,8 @@
                                  <HBox.margin>
                                     <Insets right="50.0" />
                                  </HBox.margin></Button>
-                              <Button fx:id="back" mnemonicParsing="false" onAction="#back" styleClass="btn-menu" stylesheets="@../css/MenuButton.css" text="Back">
+                              <Button fx:id="stats" mnemonicParsing="false" onAction="#voirStat" styleClass="btn-menu" stylesheets="@../css/MenuButton.css" text="Voir les statistiques" />
+                              <Button fx:id="back" mnemonicParsing="false" onAction="#back" styleClass="btn-menu" stylesheets="@../css/MenuButton.css" text="Retour">
                                  <HBox.margin>
                                     <Insets left="50.0" />
                                  </HBox.margin></Button>
